# Logistics-Situation-Platform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/: __init__.py  assessments.py  contracts.py  events.py  indicators.py  reference.py  review_package.py  scenarios.py  thresholds.py  warehouse.py
collectors/: __init__.py  base.py  error_classification.py  event_identity.py  http_client.py  models.py  observations.py  registry.py  series_catalog.py  source_health.py  staging.py  url_redaction.py
config/: dashboard.yaml  keywords.yaml  sources.yaml  task_manifest.json
docs/: air_land_extension_points.md  bundle1_architecture.md  chatgpt_review_workflow.md  dashboard_user_guide.md  data_model_and_persistence.md  event_lifecycle.md  external_driver_admission.md  freight_proxy_limitations.md  gdacs_tmd_cap_pilot.md  historical_validation.md  human_review_process.md  indicator_definitions.md  known_data_gaps.md  ocean_lane_selection.md  operations_runbook.md  port_pressure_interpretation.md  security_and_privacy_boundary.md  source_enablement_decisions.md  source_health_and_event_identity.md  source_priority_framework.md  source_qualification_report.md  thailand_multimodal_logistics_intelligence_scope.md  thailand_multimodal_logistics_mvp_roadmap.md  tmd_candidate_cap_validation.md  tmd_candidate_evidence_contract.md  tmd_rss_discovery_hardening.md
methodology/: event_taxonomy.yaml  impact_rulebook.yaml  innovation_framework.yaml  preparedness_framework.yaml  (+4 more)
(+143 files in other folders)
