[project]
name = "logistics-situation-platform"
version = "0.1.1"
description = "Organization-neutral public research dashboard for global and Thailand logistics situations."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "jsonschema==4.26.0",
  "PyYAML==6.0.3",
]

[dependency-groups]
dev = [
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[tool.uv]
required-version = ">=0.10.0,<0.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["dashboard/public"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S603", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*" = ["E402"]
